[package]
name = "critiq_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full","macros","rt-multi-thread"] }
axum = {version = "0.6.18", features = ["tokio", "macros", "headers"]}
axum-macros = "0.3.7"
serde = { version = "1.0.106", features = ["derive"] }
dotenv = "0.15.0"
postgrest = "1.5.0"